--- a/packages/jbrowse-plugin-apollo/package.json
+++ b/packages/jbrowse-plugin-apollo/package.json
@@ -61,13 +61,14 @@
     "clsx": "^1.1.1",
     "file-saver": "^2.0.5",
     "http-proxy-middleware": "^2.0.6",
+    "idb": "^7.1.1",
     "nanoid": "^4.0.2",
     "regenerator-runtime": "^0.13.9",
     "socket.io-client": "^4.5.3",
     "tslib": "^2.0.3"
   },
   "peerDependencies": {
-    "@jbrowse/core": "^2.3.4",
+    "@jbrowse/core": "^2.6.2",
     "@mui/material": "^5.9.1",
     "mobx": "^6.6.1",
     "mobx-react": "^7.2.1",
@@ -80,7 +81,7 @@
   },
   "devDependencies": {
     "@jbrowse/cli": "^2.6.2",
-    "@jbrowse/core": "^2.3.4",
+    "@jbrowse/core": "^2.6.2",
     "@jbrowse/development-tools": "^2.1.1",
     "@jest/globals": "^29.0.3",
     "@mui/material": "^5.9.1",
@@ -93,6 +94,7 @@
     "@types/react": "^17.0.34",
     "@types/react-dom": "^18",
     "cypress": "^12.17.2",
+    "fake-indexeddb": "^4.0.2",
     "jest": "^29.0.3",
     "jest-fetch-mock": "^3.0.3",
     "mobx": "^6.6.1",
