overhaul text searching to provide which field was matched, use proper JSONPath for configuring text indexing fields

--- a/packages/jbrowse-plugin-apollo/package.json
+++ b/packages/jbrowse-plugin-apollo/package.json
@@ -53,6 +53,7 @@
     "@jbrowse/plugin-authentication": "^2.0.1",
     "@jbrowse/plugin-linear-genome-view": "^2.0.1",
     "@mui/icons-material": "^5.8.4",
+    "@types/jsonpath": "^0.2.0",
     "apollo-common": "workspace:^",
     "apollo-mst": "workspace:^",
     "apollo-shared": "workspace:^",
@@ -62,6 +63,7 @@
     "file-saver": "^2.0.5",
     "http-proxy-middleware": "^2.0.6",
     "idb": "^7.1.1",
+    "jsonpath": "^1.1.1",
     "nanoid": "^4.0.2",
     "regenerator-runtime": "^0.13.9",
     "socket.io-client": "^4.5.3",
