--- a/packages/jbrowse-plugin-apollo/package.json
+++ b/packages/jbrowse-plugin-apollo/package.json
@@ -60,6 +60,7 @@
     "autosuggest-highlight": "^3.3.4",
     "bson-objectid": "^2.0.3",
     "clsx": "^1.1.1",
+    "fast-deep-equal": "^3.1.3",
     "file-saver": "^2.0.5",
     "http-proxy-middleware": "^2.0.6",
     "idb": "^7.1.1",
