--- a/packages/jbrowse-plugin-apollo/package.json
+++ b/packages/jbrowse-plugin-apollo/package.json
@@ -53,15 +53,18 @@
     "@jbrowse/plugin-authentication": "^2.0.1",
     "@jbrowse/plugin-linear-genome-view": "^2.0.1",
     "@mui/icons-material": "^5.8.4",
+    "@types/jsonpath": "^0.2.0",
     "apollo-common": "workspace:^",
     "apollo-mst": "workspace:^",
     "apollo-shared": "workspace:^",
     "autosuggest-highlight": "^3.3.4",
     "bson-objectid": "^2.0.3",
     "clsx": "^1.1.1",
+    "fast-deep-equal": "^3.1.3",
     "file-saver": "^2.0.5",
     "http-proxy-middleware": "^2.0.6",
     "idb": "^7.1.1",
+    "jsonpath": "^1.1.1",
     "nanoid": "^4.0.2",
     "regenerator-runtime": "^0.13.9",
     "socket.io-client": "^4.5.3",
@@ -95,7 +98,7 @@
     "@types/react-dom": "^18",
     "cypress": "^12.17.2",
     "fake-indexeddb": "^4.0.2",
-    "jest": "^29.0.3",
+    "jest": "^29.6.2",
     "jest-fetch-mock": "^3.0.3",
     "mobx": "^6.6.1",
     "mobx-react": "^7.2.1",
