--- a/packages/jbrowse-plugin-apollo/package.json
+++ b/packages/jbrowse-plugin-apollo/package.json
@@ -36,6 +36,7 @@
     "build": "yarn build:shared && yarn clean && rollup --config",
     "browse": "serve --listen 8999 .jbrowse",
     "test": "jest",
+    "test:ci": "jest --coverage",
     "test:e2e": "start-test \"npm-run-all --parallel start browse\" \"9000|8999\" \"npm-run-all cypress:run\"",
     "cypress:run": "cypress run --browser chrome --config baseUrl=http://localhost:8999",
     "cypress:open": "cypress open --config baseUrl=http://localhost:8999",
