--- a/packages/jbrowse-plugin-apollo/package.json
+++ b/packages/jbrowse-plugin-apollo/package.json
@@ -104,6 +104,7 @@
     "fake-indexeddb": "^4.0.2",
     "jest": "^29.6.2",
     "jest-fetch-mock": "^3.0.3",
+    "librpc-web-mod": "^1.1.9",
     "mobx": "^6.6.1",
     "mobx-react": "^7.2.1",
     "mobx-state-tree": "^5.1.7",
