--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -6,7 +6,7 @@ on:
 
 jobs:
   build:
-    name: Test Apollo
+    name: End-to-end test
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
