--- a/packages/jbrowse-plugin-apollo/package.json
+++ b/packages/jbrowse-plugin-apollo/package.json
@@ -36,6 +36,7 @@
     "build": "yarn build:shared && yarn clean && rollup --config",
     "browse": "serve --listen 8999 .jbrowse",
     "test": "jest",
+    "test:ci": "jest --coverage",
     "start:collab": "yarn workspace apollo-collaboration-server run start",
     "test:e2e": "yarn build && start-test \"npm-run-all --parallel start:server browse start:collab\" \"9000|8999|http://localhost:3999/health\" \"npm-run-all cypress:run\"",
     "cypress:run": "cypress run --browser chrome --config baseUrl=http://localhost:8999",
