--- a/packages/apollo-collaboration-server/.development.env
+++ b/packages/apollo-collaboration-server/.development.env
@@ -60,7 +60,10 @@ MICROSOFT_CLIENT_SECRET=~Gr8Q~h6RTU7SMC-fjNxXy_~nabTD-ME_rFyLa.M
 LOG_LEVELS=error,warn,log,debug
 
 # Reference sequence chunk size, defaults to 262144 (256 KiB)
-# CHUNK_SIZE=5000
+# CHUNK_SIZE=500
+
+# Sequence line lenght in exported GFF3 file
+SEQ_LINE_LEN=90
 
 # Default new user role, possible values are admin, user, readOnly, and none
 # Defaults to none
