--- a/packages/jbrowse-plugin-apollo/package.json
+++ b/packages/jbrowse-plugin-apollo/package.json
@@ -39,7 +39,9 @@
     "test:ci": "jest --coverage",
     "start:collab": "yarn workspace apollo-collaboration-server run start",
     "test:e2e": "yarn build && start-test \"npm-run-all --parallel start:server browse start:collab\" \"9000|8999|http://localhost:3999/health\" \"npm-run-all cypress:run\"",
-    "cypress:run": "cypress run --browser chrome --config baseUrl=http://localhost:8999",
+    "test:e2e:debug": "yarn build && start-test \"npm-run-all --parallel start:server browse start:collab\" \"9000|8999|http://localhost:3999/health\" \"npm-run-all cypress:debug\"",
+    "cypress:run": "cypress run --browser chrome",
+    "cypress:debug": "cypress run --browser chrome --config screenshotOnRunFailure=true,video=true",
     "cypress:open": "cypress open --config baseUrl=http://localhost:3000",
     "prepublish": "yarn test",
     "prepack": "yarn build",
