--- a/packages/jbrowse-plugin-apollo/package.json
+++ b/packages/jbrowse-plugin-apollo/package.json
@@ -37,9 +37,12 @@
     "browse": "serve --listen 8999 .jbrowse",
     "test": "jest",
     "test:ci": "jest --coverage",
-    "test:e2e": "start-test \"npm-run-all --parallel start browse\" \"9000|8999\" \"npm-run-all cypress:run\"",
-    "cypress:run": "cypress run --browser chrome --config baseUrl=http://localhost:8999",
-    "cypress:open": "cypress open --config baseUrl=http://localhost:8999",
+    "start:collab": "yarn workspace apollo-collaboration-server run start",
+    "test:e2e": "yarn build && start-test \"npm-run-all --parallel start:server browse start:collab\" \"9000|8999|http://localhost:3999/health\" \"npm-run-all cypress:run\"",
+    "test:e2e:debug": "yarn build && start-test \"npm-run-all --parallel start:server browse start:collab\" \"9000|8999|http://localhost:3999/health\" \"npm-run-all cypress:debug\"",
+    "cypress:run": "cypress run --browser chrome",
+    "cypress:debug": "cypress run --browser chrome --config screenshotOnRunFailure=true,video=true",
+    "cypress:open": "cypress open --config baseUrl=http://localhost:3000",
     "prepublish": "yarn test",
     "prepack": "yarn build",
     "postversion": "git push --follow-tags"
@@ -98,6 +101,7 @@
     "@types/react": "^17.0.34",
     "@types/react-dom": "^18",
     "cypress": "^12.17.2",
+    "cypress-mongodb": "^6.2.0",
     "fake-indexeddb": "^4.0.2",
     "jest": "^29.6.2",
     "jest-fetch-mock": "^3.0.3",
