--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -7,6 +7,9 @@ packageExtensions:
     dependencies:
       "#ansi-styles": "npm:ansi-styles@6.1.0"
       "#supports-color": "npm:supports-color@9.2.2"
+  cypress-mongodb@*:
+    dependencies:
+      bson: "^4"
   material-ui-popup-state@*:
     peerDependencies:
       "@emotion/react": "*"
