--- a/docs/config.json
+++ b/docs/config.json
@@ -15,6 +15,26 @@
           "main": "#6b4e2b"
         }
       }
+    },
+    "ApolloPlugin": {
+      "ontologies": [
+        {
+          "name": "Gene Ontology",
+          "version": "full",
+          "source": {
+            "uri": "https://release.geneontology.org/2023-06-11/ontology/go.json",
+            "locationType": "UriLocation"
+          }
+        },
+        {
+          "name": "Sequence Ontology",
+          "version": "3.1",
+          "source": {
+            "uri": "test_data/so-v3.1.json",
+            "locationType": "UriLocation"
+          }
+        }
+      ]
     }
   },
   "plugins": [
