Update yarn version

--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -9,7 +9,7 @@ packageExtensions:
       "#supports-color": "npm:supports-color@9.2.2"
   cypress-mongodb@*:
     dependencies:
-      bson: "^4"
+      bson: ^4
   material-ui-popup-state@*:
     peerDependencies:
       "@emotion/react": "*"
@@ -33,4 +33,4 @@ plugins:
   - path: .yarn/plugins/@yarnpkg/plugin-version.cjs
     spec: "@yarnpkg/plugin-version"
 
-yarnPath: .yarn/releases/yarn-3.6.1.cjs
+yarnPath: .yarn/releases/yarn-3.6.4.cjs
