--- a/packages/apollo-collaboration-server/package.json
+++ b/packages/apollo-collaboration-server/package.json
@@ -28,7 +28,7 @@
     "@emotion/styled": "^11.10.6",
     "@gmod/gff": "^1.2.0",
     "@gmod/indexedfasta": "^2.0.4",
-    "@jbrowse/core": "^2.3.4",
+    "@jbrowse/core": "2.6.3",
     "@mui/base": "^5.0.0-alpha.118",
     "@mui/material": "^5.11.10",
     "@nestjs/common": "^10.1.0",
@@ -55,7 +55,7 @@
     "mobx": "^6.6.1",
     "mobx-react": "^7.2.1",
     "mobx-state-tree": "^5.1.7",
-    "mongoose": "^6.2.6",
+    "mongoose": "^6.12.0",
     "mongoose-id-validator": "^0.6.0",
     "multer": "^1.4.4",
     "node-fetch": "^2.6.7",
@@ -65,7 +65,7 @@
     "passport-local": "^1.0.0",
     "passport-microsoft": "^1.0.0",
     "pm2": "^5.3.0",
-    "prop-types": "^15.0.0",
+    "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "reflect-metadata": "^0.1.13",
@@ -84,7 +84,7 @@
     "@types/express-session": "^1",
     "@types/jest": "^27.0.1",
     "@types/multer": "^1.4.7",
-    "@types/node": "^18.11.9",
+    "@types/node": "^18.14.2",
     "@types/node-fetch": "^2.6.2",
     "@types/passport-google-oauth20": "^2.0.11",
     "@types/passport-jwt": "^3.0.6",
@@ -93,9 +93,9 @@
     "@types/react": "^17.0.34",
     "@types/supertest": "^2.0.11",
     "apollo-mst": "workspace:^",
-    "jest": "^27.0.6",
+    "jest": "^29.6.2",
     "mongodb": "^4.7.0",
-    "prettier": "^2.3.2",
+    "prettier": "^3.0.0",
     "rimraf": "^3.0.2",
     "source-map-support": "^0.5.20",
     "supertest": "^6.1.3",
