--- a/packages/apollo-mst/package.json
+++ b/packages/apollo-mst/package.json
@@ -6,10 +6,10 @@
     "build": "tsc"
   },
   "dependencies": {
-    "@jbrowse/core": "^2.3.4",
+    "@jbrowse/core": "2.6.3",
     "mobx": "^6.6.1",
-    "mobx-state-tree": "^5.1.5",
-    "rxjs": "^6.0.0",
+    "mobx-state-tree": "^5.1.7",
+    "rxjs": "^7.4.0",
     "tslib": "^2.3.1"
   },
   "devDependencies": {
