--- a/packages/apollo-shared/package.json
+++ b/packages/apollo-shared/package.json
@@ -10,11 +10,11 @@
   "dependencies": {
     "@gmod/gff": "^1.2.0",
     "@gmod/indexedfasta": "^2.0.4",
-    "@jbrowse/core": "^2.3.4",
+    "@jbrowse/core": "2.6.3",
     "apollo-common": "workspace:^",
     "apollo-mst": "workspace:^",
     "apollo-schemas": "workspace:^",
-    "bson-objectid": "^2.0.3",
+    "bson-objectid": "^2.0.4",
     "generic-filehandle": "^3.0.0",
     "jwt-decode": "^3.1.2",
     "regenerator-runtime": "^0.13.9",
@@ -24,24 +24,24 @@
   "devDependencies": {
     "@nestjs/common": "^10.1.0",
     "@nestjs/core": "^10.1.0",
-    "@types/node": "^18.11.9",
+    "@types/node": "^18.14.2",
     "@types/rimraf": "^3",
     "mobx": "^6.6.1",
-    "mobx-state-tree": "^5.1.5",
-    "mongoose": "^6.2.10",
+    "mobx-state-tree": "^5.1.7",
+    "mongoose": "^6.12.0",
     "rimraf": "^3.0.2",
     "typescript": "^5.1.6"
   },
   "peerDependencies": {
-    "@mui/material": "^5.9.1",
-    "@mui/x-data-grid": "^4.0.0",
+    "@mui/material": "^5.11.10",
+    "@mui/x-data-grid": "^6.0.1",
     "mobx": "^6.6.1",
     "mobx-react": "^7.2.1",
-    "mobx-state-tree": "^5.1.5",
-    "prop-types": "^15.0.0",
-    "react": "^17.0.0",
-    "react-dom": "^17.0.0",
-    "rxjs": "^6.0.0"
+    "mobx-state-tree": "^5.1.7",
+    "prop-types": "^15.8.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "rxjs": "^7.4.0"
   },
   "private": true
 }
