--- a/packages/jbrowse-plugin-apollo/package.json
+++ b/packages/jbrowse-plugin-apollo/package.json
@@ -51,8 +51,8 @@
     "name": "Apollo"
   },
   "dependencies": {
-    "@emotion/react": "^11.9.3",
-    "@emotion/styled": "^11.9.3",
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
     "@gmod/gff": "^1.2.0",
     "@jbrowse/plugin-authentication": "^2.0.1",
     "@jbrowse/plugin-linear-genome-view": "^2.0.1",
@@ -62,7 +62,7 @@
     "apollo-mst": "workspace:^",
     "apollo-shared": "workspace:^",
     "autosuggest-highlight": "^3.3.4",
-    "bson-objectid": "^2.0.3",
+    "bson-objectid": "^2.0.4",
     "clsx": "^1.1.1",
     "fast-deep-equal": "^3.1.3",
     "file-saver": "^2.0.5",
@@ -71,32 +71,31 @@
     "jsonpath": "^1.1.1",
     "nanoid": "^4.0.2",
     "regenerator-runtime": "^0.13.9",
-    "socket.io-client": "^4.5.3",
-    "tslib": "^2.0.3"
+    "socket.io-client": "^4.5.4",
+    "tslib": "^2.3.1"
   },
   "peerDependencies": {
-    "@jbrowse/core": "^2.6.2",
-    "@mui/material": "^5.9.1",
+    "@jbrowse/core": "2.6.3",
+    "@mui/material": "^5.11.10",
     "mobx": "^6.6.1",
     "mobx-react": "^7.2.1",
-    "mobx-state-tree": "^5.1.5",
+    "mobx-state-tree": "^5.1.7",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "rxjs": "^6.5.2",
-    "tss-react": "^3.7.1"
+    "rxjs": "^7.4.0",
+    "tss-react": "^4.6.1"
   },
   "devDependencies": {
     "@jbrowse/cli": "^2.6.2",
-    "@jbrowse/core": "^2.6.2",
+    "@jbrowse/core": "2.6.3",
     "@jbrowse/development-tools": "^2.1.1",
     "@jest/globals": "^29.0.3",
-    "@mui/material": "^5.9.1",
+    "@mui/material": "^5.11.10",
     "@mui/x-data-grid": "^6.0.1",
     "@types/autosuggest-highlight": "^3",
-    "@types/cypress": "^1.1.3",
     "@types/file-saver": "^2",
-    "@types/node": "^18.11.9",
+    "@types/node": "^18.14.2",
     "@types/prop-types": "^15",
     "@types/react": "^17.0.34",
     "@types/react-dom": "^18",
@@ -107,20 +106,20 @@
     "jest-fetch-mock": "^3.0.3",
     "mobx": "^6.6.1",
     "mobx-react": "^7.2.1",
-    "mobx-state-tree": "^5.1.5",
-    "npm-run-all": "4.1.5",
+    "mobx-state-tree": "^5.1.7",
+    "npm-run-all": "^4.1.5",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "rimraf": "^3.0.2",
     "rollup": "^2.59.0",
-    "rxjs": "^6.5.2",
+    "rxjs": "^7.4.0",
     "serve": "^14.0.1",
     "shx": "^0.3.3",
     "start-server-and-test": "^1.11.7",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.3.0",
-    "tss-react": "^3.7.1",
+    "tss-react": "^4.6.1",
     "typescript": "^5.1.6"
   },
   "private": true,
