Fix types after JBrowse 2.7.0 update

--- a/packages/apollo-collaboration-server/package.json
+++ b/packages/apollo-collaboration-server/package.json
@@ -28,7 +28,7 @@
     "@emotion/styled": "^11.10.6",
     "@gmod/gff": "^1.2.0",
     "@gmod/indexedfasta": "^2.0.4",
-    "@jbrowse/core": "2.6.3",
+    "@jbrowse/core": "^2.7.0",
     "@mui/base": "^5.0.0-alpha.118",
     "@mui/material": "^5.11.10",
     "@nestjs/common": "^10.1.0",
