--- a/packages/apollo-common/package.json
+++ b/packages/apollo-common/package.json
@@ -12,7 +12,7 @@
   },
   "dependencies": {
     "@gmod/gff": "^1.2.0",
-    "@jbrowse/core": "2.6.3",
+    "@jbrowse/core": "^2.7.0",
     "apollo-schemas": "workspace:^",
     "bson-objectid": "^2.0.4",
     "tslib": "^2.3.1"
