--- a/packages/jbrowse-plugin-apollo/package.json
+++ b/packages/jbrowse-plugin-apollo/package.json
@@ -75,7 +75,7 @@
     "tslib": "^2.3.1"
   },
   "peerDependencies": {
-    "@jbrowse/core": "2.6.3",
+    "@jbrowse/core": "^2.7.0",
     "@mui/material": "^5.11.10",
     "mobx": "^6.6.1",
     "mobx-react": "^7.2.1",
@@ -88,7 +88,7 @@
   },
   "devDependencies": {
     "@jbrowse/cli": "^2.6.2",
-    "@jbrowse/core": "2.6.3",
+    "@jbrowse/core": "^2.7.0",
     "@jbrowse/development-tools": "^2.1.1",
     "@jest/globals": "^29.0.3",
     "@mui/material": "^5.11.10",
