--- a/packages/apollo-shared/package.json
+++ b/packages/apollo-shared/package.json
@@ -8,7 +8,7 @@
     "clean": "rimraf dist"
   },
   "dependencies": {
-    "@gmod/gff": "^1.2.0",
+    "@gmod/gff": "1.2.0",
     "@gmod/indexedfasta": "^2.0.4",
     "@jbrowse/core": "^2.7.0",
     "apollo-common": "workspace:^",
