--- a/packages/jbrowse-plugin-apollo/package.json
+++ b/packages/jbrowse-plugin-apollo/package.json
@@ -99,7 +99,7 @@
     "@types/prop-types": "^15",
     "@types/react": "^17.0.34",
     "@types/react-dom": "^18",
-    "cypress": "^12.17.2",
+    "cypress": "12.17.3",
     "cypress-mongodb": "^6.2.0",
     "fake-indexeddb": "^4.0.2",
     "jest": "^29.6.2",
