--- a/packages/jbrowse-plugin-apollo/package.json
+++ b/packages/jbrowse-plugin-apollo/package.json
@@ -53,7 +53,7 @@
   "dependencies": {
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
-    "@gmod/gff": "^1.2.0",
+    "@gmod/gff": "1.2.0",
     "@jbrowse/plugin-authentication": "^2.0.1",
     "@jbrowse/plugin-linear-genome-view": "^2.0.1",
     "@mui/icons-material": "^5.8.4",
@@ -99,7 +99,7 @@
     "@types/prop-types": "^15",
     "@types/react": "^17.0.34",
     "@types/react-dom": "^18",
-    "cypress": "^12.17.2",
+    "cypress": "12.17.3",
     "cypress-mongodb": "^6.2.0",
     "fake-indexeddb": "^4.0.2",
     "jest": "^29.6.2",
