--- a/packages/jbrowse-plugin-apollo/package.json
+++ b/packages/jbrowse-plugin-apollo/package.json
@@ -32,14 +32,14 @@
     "clean": "rimraf dist",
     "start": "yarn clean && npm-run-all --parallel start:watch start:server",
     "start:watch": "JB_NPM=false NODE_ENV=development rollup --config --watch",
-    "start:server": "serve --cors --listen 9000 .",
+    "start:server": "serve --no-request-logging --cors --listen 9000 .",
     "build": "yarn build:shared && yarn clean && rollup --config",
-    "browse": "serve --listen 8999 .jbrowse",
+    "browse": "serve --no-request-logging --listen 8999 .jbrowse",
     "test": "jest",
     "test:ci": "jest --coverage",
-    "start:collab": "yarn workspace apollo-collaboration-server run start",
-    "test:e2e": "yarn build && start-test \"npm-run-all --parallel start:server browse start:collab\" \"9000|8999|http://localhost:3999/health\" \"npm-run-all cypress:run\"",
-    "test:e2e:debug": "yarn build && start-test \"npm-run-all --parallel start:server browse start:collab\" \"9000|8999|http://localhost:3999/health\" \"npm-run-all cypress:debug\"",
+    "start:collab-cypress": "yarn workspace apollo-collaboration-server run cypress:start",
+    "test:e2e": "yarn build && start-test \"npm-run-all --parallel start:server browse start:collab-cypress\" \"9000|8999|http://localhost:3999/health\" \"npm-run-all cypress:run\"",
+    "test:e2e:debug": "yarn build && start-test \"npm-run-all --parallel start:server browse start:collab-cypress\" \"9000|8999|http://localhost:3999/health\" \"npm-run-all cypress:debug\"",
     "cypress:run": "cypress run --browser chrome",
     "cypress:debug": "cypress run --browser chrome --config screenshotOnRunFailure=true,video=true",
     "cypress:open": "cypress open --config baseUrl=http://localhost:3000",
