Add sequence to exported GFF3 (#281)
* Added sequence data into exported GFF3

* FASTA is now included in exported GFF3

* Fixed small format issues

* all sequence data lines are now same lenght in exported GFF3

* Use more streams

* Fix test

---------

Co-authored-by: Garrett Stevens <stevens.garrett.j@gmail.com>

--- a/packages/apollo-collaboration-server/.development.env
+++ b/packages/apollo-collaboration-server/.development.env
@@ -60,7 +60,7 @@ MICROSOFT_CLIENT_SECRET=~Gr8Q~h6RTU7SMC-fjNxXy_~nabTD-ME_rFyLa.M
 LOG_LEVELS=error,warn,log,debug
 
 # Reference sequence chunk size, defaults to 262144 (256 KiB)
-# CHUNK_SIZE=5000
+CHUNK_SIZE=500
 
 # Default new user role, possible values are admin, user, readOnly, and none
 # Defaults to none
