--- a/package.json
+++ b/package.json
@@ -40,5 +40,10 @@
     "react": "^18.2.0",
     "typescript": "^5.1.6"
   },
-  "private": true
+  "private": true,
+  "dependenciesMeta": {
+    "rxjs@7.8.1": {
+      "unplugged": true
+    }
+  }
 }
