--- a/packages/jbrowse-plugin-apollo/package.json
+++ b/packages/jbrowse-plugin-apollo/package.json
@@ -37,6 +37,7 @@
     "browse": "serve --no-request-logging --listen 8999 .jbrowse",
     "test": "jest",
     "test:ci": "jest --coverage",
+    "test:esm": "node --experimental-vm-modules $(yarn bin jest)",
     "start:collab-cypress": "yarn workspace apollo-collaboration-server run cypress:start",
     "test:e2e": "yarn build && start-test \"npm-run-all --parallel start:server browse start:collab-cypress\" \"9000|8999|http://localhost:3999/health\" \"npm-run-all cypress:run\"",
     "test:e2e:debug": "yarn build && start-test \"npm-run-all --parallel start:server browse start:collab-cypress\" \"9000|8999|http://localhost:3999/health\" \"npm-run-all cypress:debug\"",
@@ -103,6 +104,7 @@
     "cypress-mongodb": "^6.2.0",
     "fake-indexeddb": "^4.0.2",
     "jest": "^29.6.2",
+    "jest-environment-jsdom": "^29.7.0",
     "jest-fetch-mock": "^3.0.3",
     "librpc-web-mod": "^1.1.9",
     "mobx": "^6.6.1",
