Temporary commit with stubs for login using name and password

--- a/packages/apollo-cli/tsconfig.json
+++ b/packages/apollo-cli/tsconfig.json
@@ -7,7 +7,22 @@
     "rootDir": "src",
     "strict": true,
     "target": "es2019",
-    "strictPropertyInitialization": false
+    "strictPropertyInitialization": false,
+
+    "removeComments": true,
+    "emitDecoratorMetadata": true,
+    "experimentalDecorators": true,
+    "allowSyntheticDefaultImports": true,
+    "sourceMap": true,
+    "baseUrl": "./",
+    "incremental": true,
+    "skipLibCheck": true,
+    "strictNullChecks": false,
+    "noImplicitAny": false,
+    "strictBindCallApply": false,
+    "forceConsistentCasingInFileNames": false,
+    "noFallthroughCasesInSwitch": false
+
   },
   "include": [
     "src/**/*"
