--- a/packages/apollo-cli/package.json
+++ b/packages/apollo-cli/package.json
@@ -15,23 +15,47 @@
     "/oclif.manifest.json"
   ],
   "dependencies": {
+    "@nestjs/common": "^10.0.0",
+    "@nestjs/core": "^10.0.0",
+    "@nestjs/jwt": "^10.2.0",
+    "@nestjs/platform-express": "^10.0.0",
     "@oclif/core": "^1.22.0",
     "@oclif/plugin-help": "^5",
-    "axios": "^1.2.2"
+    "axios": "^1.2.2",
+    "reflect-metadata": "^0.1.13",
+    "rxjs": "^7.8.1"
   },
   "devDependencies": {
+    "@nestjs/cli": "^10.0.0",
+    "@nestjs/schematics": "^10.0.0",
+    "@nestjs/testing": "^10.0.0",
     "@oclif/test": "^2.2.16",
     "@types/axios": "^0.14.0",
     "@types/chai": "^4",
+    "@types/express": "^4.17.17",
+    "@types/jest": "^29.5.2",
     "@types/mocha": "^9.0.0",
     "@types/node": "^18.14.2",
+    "@types/supertest": "^2.0.12",
+    "@typescript-eslint/eslint-plugin": "^6.0.0",
+    "@typescript-eslint/parser": "^6.0.0",
     "chai": "^4",
+    "eslint": "^8.42.0",
     "eslint-config-oclif": "^4",
     "eslint-config-oclif-typescript": "^1.0.3",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-prettier": "^5.0.0",
+    "jest": "^29.5.0",
     "mocha": "^9",
     "oclif": "^3",
+    "prettier": "^3.0.0",
     "shx": "^0.3.3",
+    "source-map-support": "^0.5.21",
+    "supertest": "^6.3.3",
+    "ts-jest": "^29.1.0",
+    "ts-loader": "^9.4.3",
     "ts-node": "^10.3.0",
+    "tsconfig-paths": "^4.2.0",
     "tslib": "^2.3.1",
     "typescript": "^5.1.6"
   },
@@ -52,7 +76,8 @@
     "posttest": "yarn lint",
     "prepack": "yarn build && oclif manifest && oclif readme",
     "test": "mocha --forbid-only \"test/**/*.test.ts\"",
-    "version": "oclif readme && git add README.md"
+    "version": "oclif readme && git add README.md",
+    "start": "nest start"
   },
   "engines": {
     "node": ">=12.0.0"
