--- a/packages/apollo-collaboration-server/.development.env
+++ b/packages/apollo-collaboration-server/.development.env
@@ -44,6 +44,14 @@ MICROSOFT_CLIENT_SECRET=~Gr8Q~h6RTU7SMC-fjNxXy_~nabTD-ME_rFyLa.M
 # Alternatively, can be a path to a file with the client secret
 # MICROSOFT_CLIENT_SECRET_FILE=/run/secrets/microsoft-client-secret
 
+##############################################################################
+## To login via username and password
+##############################################################################
+ALLOW_ROOT_USER=false
+ROOT_USER_NAME=root
+ROOT_USER_PASSWORD=1234
+ROOT_USER_PASSWORD_FILE
+
 ##############
 ## OPTIONAL ##
 ##############
