--- a/packages/apollo-cli/.gitignore
+++ b/packages/apollo-cli/.gitignore
@@ -1,2 +1,10 @@
-.yarn/
-.yarnrc.yml
+*-debug.log
+*-error.log
+/.nyc_output
+/dist
+/lib
+/package-lock.json
+/tmp
+/.yarn
+node_modules
+oclif.manifest.json
