--- a/docker/config/config.json
+++ b/docker/config/config.json
@@ -30,15 +30,7 @@
       "name": "Demo Server",
       "description": "A server hosting a small fictional organism to demonstrate Apollo capabilities",
       "domains": ["localhost:3999"],
-      "baseURL": "http://localhost:3999",
-      "google": {
-        "authEndpoint": "http://localhost:3999/auth/google" ,
-        "clientId": "1054515969695-3hpfg1gd0ld3sgj135kfgikolu86vv30.apps.googleusercontent.com"
-      },
-      "microsoft": {
-        "authEndpoint": "http://localhost:3999/auth/microsoft" ,
-        "clientId": "fabdd045-163c-4712-9d40-dbbb043b3090"
-      }
+      "baseURL": "http://localhost:3999"
     }
   ],
   "defaultSession": {
