--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -76,6 +76,19 @@
         "<node_internals>/**",
         "**/.yarn/cache/**"
       ]
-    }
+    },
+    {
+      "type": "node",
+      "request": "launch",
+      "name": "Execute Command",
+      "skipFiles": [
+          "<node_internals>/**"
+      ],
+      "program": "${workspaceFolder}/bin/dev.js",
+      "args": [
+        "hello",
+        "world",
+      ],
+    },
   ],
 }
