--- a/packages/apollo-cli/tsconfig.json
+++ b/packages/apollo-cli/tsconfig.json
@@ -1,15 +1,14 @@
 {
+  "extends": "../../tsconfig.json",
   "compilerOptions": {
-    "declaration": true,
-    "importHelpers": true,
-    "module": "commonjs",
-    "outDir": "dist",
-    "rootDir": "src",
-    "strict": true,
-    "target": "es2019",
-    "strictPropertyInitialization": false
+    "module": "CommonJS",
+    "outDir": "./dist",
+    "rootDir": "./src",
+    "target": "es2022",
+    "lib": ["ES2022"],
   },
-  "include": [
-    "src/**/*"
-  ]
+  "include": ["./src"],
+  "ts-node": {
+    "esm": true,
+  },
 }
