--- a/packages/apollo-cli/tsconfig.json
+++ b/packages/apollo-cli/tsconfig.json
@@ -1,14 +1,16 @@
 {
-  "extends": "../../tsconfig.json",
   "compilerOptions": {
-    "module": "CommonJS",
+    "declaration": true,
+    "module": "Node16",
     "outDir": "./dist",
     "rootDir": "./src",
+    "strict": true,
     "target": "es2022",
-    "lib": ["ES2022"],
+    "moduleResolution": "node16",
+    "skipLibCheck": true,
   },
   "include": ["./src"],
   "ts-node": {
-    "esm": true,
-  },
+    "esm": true
+  }
 }
