Get one test working

--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -10,6 +10,9 @@ packageExtensions:
   cypress-mongodb@*:
     dependencies:
       bson: ^4
+  fancy-test@*:
+    dependencies:
+      chai: "*"
   material-ui-popup-state@*:
     peerDependencies:
       "@emotion/react": "*"
@@ -18,6 +21,9 @@ packageExtensions:
   mobx-react@*:
     peerDependencies:
       react-dom: "*"
+  mocha@*:
+    dependencies:
+      ts-node: "*"
   mongoose-id-validator@*:
     peerDependencies:
       mongoose: "*"
