--- a/packages/apollo-cli/package.json
+++ b/packages/apollo-cli/package.json
@@ -30,24 +30,24 @@
     "posttest": "yarn lint",
     "prepack": "yarn build && oclif manifest && oclif readme",
     "prepare": "yarn build",
-    "test": "mocha --forbid-only \"test/**/*.test.ts\"",
+    "test": "mocha 'src/**/*.test.ts'",
     "version": "oclif readme && git add README.md"
   },
   "dependencies": {
-    "@oclif/core": "^3",
-    "@oclif/plugin-help": "^5",
-    "@oclif/plugin-plugins": "^4",
+    "@oclif/core": "^3.14.1",
+    "@oclif/plugin-help": "^6.0.8",
     "axios": "^1.6.2",
     "open": "^9.1.0",
     "tslib": "^2.3.1"
   },
   "devDependencies": {
     "@esbuild-kit/esm-loader": "^2.6.5",
-    "@oclif/test": "^3",
+    "@oclif/test": "^3.1.3",
     "@types/chai": "^4",
     "@types/mocha": "^10",
     "@types/node": "^18.14.2",
-    "oclif": "^4.0.4",
+    "mocha": "^10.2.0",
+    "oclif": "^4.1.0",
     "shx": "^0.3.3",
     "ts-node": "^10.3.0",
     "typescript": "^5.1.6"
