Add coverage to CLI tests

--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -24,6 +24,7 @@ packageExtensions:
   mocha@*:
     dependencies:
       ts-node: "*"
+      source-map-support: "*"
   mongoose-id-validator@*:
     peerDependencies:
       mongoose: "*"
