--- a/packages/apollo-cli/package.json
+++ b/packages/apollo-cli/package.json
@@ -30,16 +30,22 @@
     "posttest": "yarn lint",
     "prepack": "yarn build && oclif manifest && oclif readme",
     "prepare": "yarn build",
-    "test": "mocha 'src/**/*.test.ts'",
+    "test": "mocha --require ts-node/register --require src/test/fixtures.ts 'src/**/*.test.ts'",
     "test:ci": "nyc mocha 'src/**/*.test.ts'",
     "version": "oclif readme && git add README.md"
   },
   "dependencies": {
+    "@inquirer/input": "^1.2.14",
+    "@inquirer/password": "^1.1.14",
+    "@inquirer/select": "^1.3.1",
     "@oclif/core": "^3.14.1",
     "@oclif/plugin-help": "^6.0.8",
+    "@types/inquirer": "^9.0.7",
     "axios": "^1.6.2",
+    "inquirer": "^9.2.12",
     "open": "^9.1.0",
-    "tslib": "^2.3.1"
+    "tslib": "^2.3.1",
+    "yaml": "^2.3.4"
   },
   "devDependencies": {
     "@esbuild-kit/esm-loader": "^2.6.5",
