--- a/packages/apollo-cli/package.json
+++ b/packages/apollo-cli/package.json
@@ -43,6 +43,7 @@
     "@types/inquirer": "^9.0.7",
     "axios": "^1.6.2",
     "inquirer": "^9.2.12",
+    "joi": "^17.7.0",
     "open": "^9.1.0",
     "tslib": "^2.3.1",
     "yaml": "^2.3.4"
