--- a/packages/apollo-cli/tsconfig.json
+++ b/packages/apollo-cli/tsconfig.json
@@ -8,6 +8,8 @@
     "target": "es2022",
     "moduleResolution": "node16",
     "skipLibCheck": true,
+    "noEmit": true,
+    "allowImportingTsExtensions": true,
   },
   "include": ["./src"],
   "ts-node": {
