--- a/packages/apollo-cli/package.json
+++ b/packages/apollo-cli/package.json
@@ -38,7 +38,7 @@
     "@inquirer/input": "^1.2.14",
     "@inquirer/password": "^1.1.14",
     "@inquirer/select": "^1.3.1",
-    "@oclif/core": "^3.14.1",
+    "@oclif/core": "^3.18.2",
     "@oclif/plugin-help": "^6.0.8",
     "@types/inquirer": "^9.0.7",
     "axios": "^1.6.2",
@@ -59,13 +59,16 @@
     "babel-plugin-istanbul": "^6.1.1",
     "mocha": "^10.2.0",
     "nyc": "^15.1.0",
-    "oclif": "^4.1.0",
+    "oclif": "^4.4.2",
     "shx": "^0.3.3",
     "ts-node": "^10.3.0",
     "tsx": "^4.6.2",
     "typescript": "^5.1.6"
   },
   "oclif": {
+    "helpOptions": {
+      "flagSortOrder": "none"
+    },
     "bin": "apollo",
     "commands": "./dist/commands",
     "plugins": [
