--- a/packages/apollo-cli/package.json
+++ b/packages/apollo-cli/package.json
@@ -14,7 +14,7 @@
   "type": "module",
   "main": "",
   "types": "dist/index.d.ts",
-  "exports": "./lib/index.js",
+  "exports": "./dist/index.js",
   "engines": {
     "node": ">=18.0.0"
   },
@@ -40,20 +40,17 @@
     "@inquirer/select": "^1.3.1",
     "@oclif/core": "^3.18.2",
     "@oclif/plugin-help": "^6.0.8",
-    "@types/inquirer": "^9.0.7",
-    "axios": "^1.6.2",
-    "inquirer": "^9.2.12",
     "joi": "^17.7.0",
     "open": "^9.1.0",
     "tslib": "^2.3.1",
     "yaml": "^2.3.4"
   },
   "devDependencies": {
-    "@esbuild-kit/esm-loader": "^2.6.5",
     "@istanbuljs/esm-loader-hook": "^0.2.0",
     "@istanbuljs/nyc-config-typescript": "^1.0.2",
     "@oclif/test": "^3.1.3",
     "@types/chai": "^4",
+    "@types/inquirer": "^9.0.7",
     "@types/mocha": "^10",
     "@types/node": "^18.14.2",
     "babel-plugin-istanbul": "^6.1.1",
@@ -66,14 +63,13 @@
     "typescript": "^5.1.6"
   },
   "oclif": {
-    "helpOptions": {
-      "flagSortOrder": "none"
-    },
     "bin": "apollo",
+    "dirname": "apollo-cli",
     "commands": "./dist/commands",
     "plugins": [
       "@oclif/plugin-help"
     ],
+    "repositoryPrefix": "<%- repo %>/blob/v<%- version %>/packages/apollo-cli/<%- commandPath %>",
     "topicSeparator": " "
   }
 }
