Lint and formatting fixes

--- a/packages/apollo-collaboration-server/.development.env
+++ b/packages/apollo-collaboration-server/.development.env
@@ -91,7 +91,6 @@ ALLOW_GUEST_USER=true
 ## To login via username and password
 ##############################################################################
 ALLOW_ROOT_USER=false
-ROOT_USER_NAME=root
-ROOT_USER_PASSWORD=1234
+ROOT_USER_NAME=admin
+ROOT_USER_PASSWORD=pass
 ROOT_USER_PASSWORD_FILE
-
