--- a/packages/apollo-cli/package.json
+++ b/packages/apollo-cli/package.json
@@ -30,7 +30,7 @@
     "posttest": "yarn lint",
     "prepack": "yarn build && oclif manifest && oclif readme",
     "prepare": "yarn build",
-    "test": "mocha --require ts-node/register --require src/test/fixtures.ts 'src/**/*.test.ts'",
+    "test": "mocha 'src/**/*.test.ts'",
     "test:ci": "nyc mocha 'src/**/*.test.ts'",
     "version": "oclif readme && git add README.md"
   },
