First Apollo CLI commands: config, login, logout, and status (#354)
* Remove clientId from plugin

* Consolidate to one login endpoint

* Fix menu items not appearing

* Stub for apollo login (issue #330 and #331)

* A few mostly automatic fixes

* Temporary commit with stubs for login using name and password

* Start implementing login with username and password

* Root login should work but needs tidying up for errors

* Misc cleanups

* Fix loading of commands

* Get one test working

* Get tests working even with imported files

* Add coverage to CLI tests

* Don't lint bin/ files

* Draft for apollo config cli

* Refactor to allow multiple profiles

* Add some validation and update tests

* Update oclif so we can use flagSortOrder

* Make login subcommand aware of profiles

* Add missing file

* Refactor Profile to have address and accessType not null

* Misc. cleanup

* Address [checklist](https://github.com/GMOD/Apollo3/pull/354#pullrequestreview-1864242924)

This commit should address most of the items in
https://github.com/GMOD/Apollo3/pull/354#pullrequestreview-1864242924

There are tests for most of them.

`"default.rootCredentials.password" must be a string` occurs if an entry is
expected to be string and instead is a number without quotes. The cli quotes as
appropriate.

> Make sure all commands print a sensible error message if the config file is
> not valid YAML or doesn't pass validation

Currently, the cli fails with a fairly friendly message if the yaml is
malformed, but if it is valid, it will process it anyway

* Lint and formatting fixes

* Make sure tests work if config dir doesn't exist yet

* Disable one test until server can be mocked

---------

Co-authored-by: Garrett Stevens <stevens.garrett.j@gmail.com>

--- a/packages/apollo-collaboration-server/.development.env
+++ b/packages/apollo-collaboration-server/.development.env
@@ -86,3 +86,11 @@ ALLOW_GUEST_USER=true
 # Alternatively, can be a path to a file with a list of plugin URLs, one URL per
 # line
 # PLUGIN_URLS_FILE=/data/plugin-urls
+
+##############################################################################
+## To login via username and password
+##############################################################################
+ALLOW_ROOT_USER=false
+ROOT_USER_NAME=admin
+ROOT_USER_PASSWORD=pass
+ROOT_USER_PASSWORD_FILE
