--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "start:server": "yarn workspace apollo-collaboration-server run start",
     "start:plugin": "yarn workspace jbrowse-plugin-apollo run start",
     "start": "npm-run-all --print-label --parallel start:shared start:server start:plugin",
-    "test": "yarn workspaces foreach --all run test:ci"
+    "test": "yarn workspaces foreach --all run test:ci",
+    "postinstall": "husky"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^6.1.0",
@@ -30,7 +31,7 @@
     "eslint-plugin-sort-destructure-keys": "^1.5.0",
     "eslint-plugin-tsdoc": "^0.2.17",
     "eslint-plugin-unicorn": "^48.0.0",
-    "husky": "^8.0.3",
+    "husky": "^9.0.11",
     "import-sort-parser-typescript": "^6.0.0",
     "import-sort-style-module": "^6.0.0",
     "jest": "^29.6.2",
