--- a/packages/apollo-cli/package.json
+++ b/packages/apollo-cli/package.json
@@ -40,6 +40,7 @@
     "@inquirer/select": "^1.3.1",
     "@oclif/core": "^3.18.2",
     "@oclif/plugin-help": "^6.0.8",
+    "bson-objectid": "^2.0.4",
     "joi": "^17.7.0",
     "open": "^9.1.0",
     "tslib": "^2.3.1",
