--- a/packages/apollo-cli/package.json
+++ b/packages/apollo-cli/package.json
@@ -61,7 +61,8 @@
     "shx": "^0.3.3",
     "ts-node": "^10.3.0",
     "tsx": "^4.6.2",
-    "typescript": "^5.1.6"
+    "typescript": "^5.1.6",
+    "undici": "^6.7.0"
   },
   "oclif": {
     "helpOptions": {
