--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -24,6 +24,7 @@ jobs:
       uses: docker/build-push-action@v2
       with:
         context: .
-        file: ./Dockerfile
+        file: ../../server.Dockerfile
         push: true
         tags: ghcr.io/${{ github.repository_owner }}/Apollo3:development
+
