--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -24,7 +24,7 @@ jobs:
       uses: docker/build-push-action@v2
       with:
         context: .
-        file: ../../server.Dockerfile
+        file: ./server.Dockerfile
         push: true
         tags: ghcr.io/gmod/apollo-collaboration-server:development
 
